Fixed footer spacing on contact us page

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ li:nth-child(2n+1) {
 
 
 .contactus-footer {
-    margin-top: 280px;
+    margin-top: 60px;
 }
 
 input {
@@ -157,9 +157,7 @@ button {
         padding-right: auto;
     }
 
-    .aboutus {
-        justify-content: center;
-    }
+
 
  
 
